--- a/Cocktails.html
+++ b/Cocktails.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cocktails</title>
-    <link rel="stylesheet" href="../Cocktails.css/Cocktails.css">
+    <link rel="stylesheet" href="Cocktails.css">
 </head>
 
 <body>
     <header>
-    <img class="logo" src="../IMG/logo.jpg" alt="logo">
+    <img class="logo" src="logo.jpg" alt="logo">
     <h1>Cocktail bar</h1>
     <p>Des cocktails maison d'une grande qualité</p>
     </header>
@@ -25,19 +25,19 @@
         <div class="cocktail-item">
             <p class="overlay"></p>
             <p class="cocktail-name">Sunmoon</p>
-            <img src="../IMG/cocktail1.png" alt="sunmoon">
+            <img src="cocktail1.png" alt="sunmoon">
         </div>
 
         <div class="cocktail-item">
             <p class="overlay"></p>
             <p class="cocktail-name">Menthalux</p>
-            <img src="../IMG/cocktail2.png" alt="menthalux">
+            <img src="cocktail2.png" alt="menthalux">
         </div>
 
         <div class="cocktail-item">
             <p class="overlay"></p>
             <p class="cocktail-name">Caipirina</p>
-            <img src="../IMG/cocktail3.png" alt="caipi">
+            <img src="cocktail3.png" alt="caipi">
         </div>
     </div>
 
@@ -45,12 +45,12 @@
         <div class="cocktail-item">
             <p class="overlay"></p>
             <p class="cocktail-name">Pina colada</p>
-            <img src="../IMG/cocktail4.png" alt="pina">
+            <img src="cocktail4.png" alt="pina">
         </div>
 
         <div class="cocktail-item">
             <p class="overlay"></p>
-            <img src="../IMG/cocktail5.png" alt="sotb">
+            <img src="cocktail5.png" alt="sotb">
             <p class="cocktail-name">Aperol spritz</p>
         </div>
     </div>
