--- a/Cocktails.html
+++ b/Cocktails.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-    <img class="logo" src="logo.jpg" alt="logo">
+    <img class="logo" src="logo 21.31.01.jpg" alt="logo">
     <h1>Cocktail bar</h1>
     <p>Des cocktails maison d'une grande qualité</p>
     </header>
